analysis/low-level-api-fir/testdata/getOrBuildFir/invalidCode/delegatedProperty.kt
<expr>val p: String by</expr>